ADD favicon and meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+    <meta name="description" content="Natal, Ano Novo, aniversário ... Descubra quanto tempo falta para a suas datas e feriados favoritos.">
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
-    <title>Quanto Falta Pro Natal?</title>
+    <link rel="shortcut icon" href="images/ico.png" type="image/x-icon">
+    <title>Quanto Falta Pro ...</title>
 </head>
 <body>
     <div id="app">
