FEATURE holiday selection

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,7 @@
                 <h1>Quanto Tempo Falta ?</h1>
             </div>
             <div class="holiday-selector-container">
-                <select name="holiday" id="holiday-selector">
-                    <option class="option" value="0">Natal</option>
-                    <option class="option" value="1">Ano Novo</option>
-                    <option class="option" value="2">Pascoa</option>
-                    <option class="option" value="3">Meu Aniversário</option>
-                </select>
+                <select name="holiday" id="holiday-selector"></select>
             </div>
             <div class="countdown-wrapper">
                 <div class="box">
