UPDATE index.html location

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
     <meta name="description" content="Natal, Ano Novo, aniversário ... Descubra quanto tempo falta para a suas datas e feriados favoritos.">
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/ico.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="src/images/ico.png" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
     <title>Quanto Falta Pro ...</title>
 </head>
@@ -43,13 +43,13 @@
             <footer class="footer-container"></footer>
         </div>
     </div>
-    <script src="lib/dated/dated.js" defer></script>
-    <script src="lib/data/db.js" defer></script>
-    <script src="lib/data/server.js" defer></script>
-    <script src="lib/feriado/feriado.js" defer></script>
-    <script src="lib/modelBuilder/builders.js" defer></script>
-    <script src="lib/countdown/countdown.js" defer></script>
-    <script src="lib/app.js" defer></script>
-    <script src="bin/index.js" defer></script>
+    <script src="src/lib/dated/dated.js" defer></script>
+    <script src="src/lib/data/db.js" defer></script>
+    <script src="src/lib/data/server.js" defer></script>
+    <script src="src/lib/feriado/feriado.js" defer></script>
+    <script src="src/lib/modelBuilder/builders.js" defer></script>
+    <script src="src/lib/countdown/countdown.js" defer></script>
+    <script src="src/lib/app.js" defer></script>
+    <script src="src/bin/index.js" defer></script>
 </body>
 </html>
